--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "psr-4": { "Finwo\\Cache\\": "src" }
     },
     "require": {
-        "php": ">=5.3",
-        "finwo/data-tools": "*@dev"
+        "php": ">=5.3"
     }
 }
